force-app/main/default/objects/NI_Org_Details__c/NI_Org_Details__c.object-meta.xml
<CustomObject>
    <description>Holds Org/Account specific details such as subscription connection credentials.</description>
    <label>NI Org Details</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Org Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>