force-app/main/default/objects/NI_Org_Details__c/fields/Acceptable_Apps__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Apps__c</fullName>
    <description>Salesforce.com Change Request: NICC-009165

Number of HRM applications or other applications installed by NI</description>
    <inlineHelpText>Number of HRM applications or other applications installed by NI</inlineHelpText>
    <label>Acceptable Custom Apps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>