force-app/main/default/objects/NI_Org_Details__c/fields/Active_Users_Platform__c.field-meta.xml
<CustomField>
    <fullName>Active_Users_Platform__c</fullName>
    <label>Active Users (Platform)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>