force-app/main/default/objects/NI_Org_Details__c/fields/Admin_Login_Name_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Admin_Login_Name_Encrypted__c</fullName>
    <description>Salesforce.com Change Request: NICC-015316

Encrypted field</description>
    <inlineHelpText>The admin user login name for the org.  This is an encrypted field</inlineHelpText>
    <label>Admin Login Name (Encrypted)</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>