force-app/main/default/objects/NI_Org_Details__c/fields/Admin_Password_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Admin_Password_Encrypted__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Salesforce.com Change Request: NICC-015316

Encrypted field</description>
    <inlineHelpText>The admin user password.  This is an encrypted field</inlineHelpText>
    <label>Admin Password (Encrypted)</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>