force-app/main/default/objects/NI_Org_Details__c/fields/AdminLoginName__c.field-meta.xml
<CustomField>
    <fullName>AdminLoginName__c</fullName>
    <description>This field has been replaced by the Admin Login Name (Encrypted) (Admin_Login_Name_Encrypted__c) field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DO NOT USE Admin Login Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>