force-app/main/default/objects/NI_Org_Details__c/fields/AdminPassword__c.field-meta.xml
<CustomField>
    <fullName>AdminPassword__c</fullName>
    <description>This field has been replaced by the &quot;Admin Password (Encrypted)&quot; field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DO NOT USE Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>