force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Connection_and_VPN_Details__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Connection_and_VPN_Details__c</fullName>
    <description>Salesforce.com Change Request: NICC-019092

Please describe how to setup a remote connection to the customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please describe how to setup a remote connection to the customer.</inlineHelpText>
    <label>Amadeus PMS Connection and VPN Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>