force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Connection_VPN__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Connection_VPN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-019092

What type of VPN connection to use for direct customer access.</description>
    <inlineHelpText>What type of VPN connection to use for direct customer access.</inlineHelpText>
    <label>Amadeus PMS Connection VPN</label>
    <type>Checkbox</type>
</CustomField>