force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Main_Connection_IP__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Main_Connection_IP__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Salesforce.com Change Request: NICC-019092

The Remote Desktop connection IP for this customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Remote Desktop connection IP for this customer.</inlineHelpText>
    <label>Amadeus PMS Main Connection IP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>