force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Manager_No_Recalc__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Manager_No_Recalc__c</fullName>
    <description>Salesforce.com Change Request: NICC-019092

The last date the &apos;Manager&apos; is recalculated in PMPro.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last date the &apos;Manager&apos; is recalculated in PMPro.</inlineHelpText>
    <label>Amadeus PMS Manager No Recalc</label>
    <type>DateTime</type>
</CustomField>