force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Password_Q_Super__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Password_Q_Super__c</fullName>
    <description>Salesforce.com Change Request: NICC-019092

The customers PMS &apos;Master&apos; password.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The customers PMS &apos;Master&apos; password.</inlineHelpText>
    <label>Amadeus PMS Password Q Super</label>
    <length>100</length>
    <type>Text</type>
</CustomField>