force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_RezExchange_Contact__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_RezExchange_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-019131

The customers contact person for RezExchange related inquiries and mailing.</description>
    <inlineHelpText>The customers contact person for RezExchange related inquiries and mailing.</inlineHelpText>
    <label>Amadeus PMS RezExchange Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Org Details (Amadeus PMS RezExchange Contact)</relationshipLabel>
    <relationshipName>Org_Details_RezExchange</relationshipName>
    <type>Lookup</type>
</CustomField>