force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_RX_Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_RX_Database_Name__c</fullName>
    <description>Salesforce.com Change Request: NICC-019092

Select the RezExchange database this customers is hosted in.</description>
    <inlineHelpText>Select the RezExchange database this customers is hosted in.</inlineHelpText>
    <label>Amadeus PMS RX Database Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OnPremise</fullName>
            </value>
            <value>
                <fullName>RX01</fullName>
            </value>
            <value>
                <fullName>RX02</fullName>
            </value>
            <value>
                <fullName>RX03</fullName>
            </value>
            <value>
                <fullName>RX04</fullName>
            </value>
            <value>
                <fullName>RX05</fullName>
            </value>
            <value>
                <fullName>RX06</fullName>
            </value>
            <value>
                <fullName>RX07</fullName>
            </value>
            <value>
                <fullName>RX08</fullName>
            </value>
            <value>
                <fullName>RX09</fullName>
            </value>
            <value>
                <fullName>RX10</fullName>
            </value>
            <value>
                <fullName>RX11</fullName>
            </value>
            <value>
                <fullName>RX99</fullName>
            </value>
            <value>
                <fullName>RXPCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>