force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Support_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-019092

The customers contact person for Support related inquiries and mailing.</description>
    <inlineHelpText>The customers contact person for Support related inquiries and mailing.</inlineHelpText>
    <label>Amadeus PMS Support Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Org Details (Itesso Support Contact)</relationshipLabel>
    <relationshipName>Org_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>