force-app/main/default/objects/NI_Org_Details__c/fields/Amadeus_PMS_Support_Details__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_PMS_Support_Details__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Salesforce.com Change Request: NICC-019092

Please describe customer specific needs and agreements for Support.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please describe customer specific needs and agreements for Support.</inlineHelpText>
    <label>Amadeus PMS Support Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>