force-app/main/default/objects/NI_Org_Details__c/fields/API_Call_Limit__c.field-meta.xml
<CustomField>
    <fullName>API_Call_Limit__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <label>API Call Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>