force-app/main/default/objects/NI_Org_Details__c/fields/API_Calls__c.field-meta.xml
<CustomField>
    <fullName>API_Calls__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <label>API Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>