force-app/main/default/objects/NI_Org_Details__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <description>The individual property in Price Manager utility for Price Position product. NICC-063922</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The individual property in Price Manager utility for Price Position product.</inlineHelpText>
    <label>Auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>