force-app/main/default/objects/NI_Org_Details__c/fields/Banquet__c.field-meta.xml
<CustomField>
    <fullName>Banquet__c</fullName>
    <description>Number of user who have &apos;View Only&apos; &amp; &apos;Banquets&apos; permission set assigned.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Banquet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>