force-app/main/default/objects/NI_Org_Details__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-008260

Date that the customer cancelled their subscription.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the customer cancelled their subscription. This field is updated by the Subscription Management Team</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>