force-app/main/default/objects/NI_Org_Details__c/fields/Client_Contact_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Email_2__c</fullName>
    <businessOwnerUser>ktownsend@newmarketinc.com</businessOwnerUser>
    <description>NICC-059350; Used to enter Client Contact Email to send automated notification.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Client Contact Email for Digital Marketing</inlineHelpText>
    <label>Client Contact Email 2</label>
    <type>Email</type>
</CustomField>