force-app/main/default/objects/NI_Org_Details__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-006916</description>
    <inlineHelpText>Main contact for Renewal Letters</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Org Details</relationshipLabel>
    <relationshipName>Org_Details</relationshipName>
    <type>Lookup</type>
</CustomField>