force-app/main/default/objects/NI_Org_Details__c/fields/Current_Full_Users__c.field-meta.xml
<CustomField>
    <fullName>Current_Full_Users__c</fullName>
    <formula>Active_Users_Total__c - Current_Limited_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Full Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>