force-app/main/default/objects/NI_Org_Details__c/fields/Current_Limited_Users__c.field-meta.xml
<CustomField>
    <fullName>Current_Limited_Users__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Count of Salesforce User Records where Limited User = TRUE and User Profile Status = Active.</description>
    <label>Current Limited Users</label>
    <summaryFilterItems>
        <field>Salesforce_User__c.Limited_User__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Salesforce_User__c.User_Profile_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Salesforce_User__c.OrgName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>