force-app/main/default/objects/NI_Org_Details__c/fields/CustomObjects__c.field-meta.xml
<CustomField>
    <fullName>CustomObjects__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <inlineHelpText>A sum of all Managed objects.</inlineHelpText>
    <label>Managed Custom Objects</label>
    <summarizedField>NI_Org_Details_Installed_Packages__c.Objects__c</summarizedField>
    <summaryFilterItems>
        <field>NI_Org_Details_Installed_Packages__c.Managed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NI_Org_Details_Installed_Packages__c.Package_Allowed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NI_Org_Details_Installed_Packages__c.Package_Verified__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>NI_Org_Details_Installed_Packages__c.NI_Org_Details__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>