force-app/main/default/objects/NI_Org_Details__c/fields/Data_Storage__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <label>Current Data Storage (GB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>