force-app/main/default/objects/NI_Org_Details__c/fields/Data_Storage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Limit__c</fullName>
    <label>Purchased Data Storage (GB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>