force-app/main/default/objects/NI_Org_Details__c/fields/Data_Storage_Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Percent_Used__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <formula>Data_Storage__c / Data_Storage_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Storage Percent Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>