force-app/main/default/objects/NI_Org_Details__c/fields/Delphi_Net_Upgrade_Customer__c.field-meta.xml
<CustomField>
    <fullName>Delphi_Net_Upgrade_Customer__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-009614</description>
    <inlineHelpText>Indicates whether or not this customer upgraded from Delphi.Net to Delphi.fdc</inlineHelpText>
    <label>Delphi.Net Upgrade Customer</label>
    <type>Checkbox</type>
</CustomField>