force-app/main/default/objects/NI_Org_Details__c/fields/DisablePolling__c.field-meta.xml
<CustomField>
    <fullName>DisablePolling__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-007567 

Part of the HRM Monitoring Application.  If this is checked, the Org is not polled</description>
    <inlineHelpText>Disables HRM Polling for the Org.</inlineHelpText>
    <label>Disable Polling</label>
    <type>Checkbox</type>
</CustomField>