force-app/main/default/objects/NI_Org_Details__c/fields/Expired_Password__c.field-meta.xml
<CustomField>
    <fullName>Expired_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-025235

This field is referenced in the &quot;AH_FetchTrialExpirationBatch&quot; Apex Class.  It is automatically checked (set to true) if &quot;ExpiredPassword&quot; is returned from the web services call when logging into a customer fdc Salesforce org.</description>
    <inlineHelpText>This field is automatically checked if &quot;ExpiredPassword&quot; is returned from the web services call when logging into a customer fdc Salesforce org.  This is part of the nightly &quot;Fetch Trial Expiration Dates&quot; Apex Job in the Amadeus Hospitality SF Org.</inlineHelpText>
    <label>Expired Password</label>
    <type>Checkbox</type>
</CustomField>