force-app/main/default/objects/NI_Org_Details__c/fields/File_Storage_Compliant__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Compliant__c</fullName>
    <formula>VALUE(TRIM(LEFT(File_Storage_Percent_Used__c, LEN(File_Storage_Percent_Used__c) - 1))) &lt; 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Storage Compliant</label>
    <type>Checkbox</type>
</CustomField>