force-app/main/default/objects/NI_Org_Details__c/fields/File_Storage_Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Percent_Used__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>File Storage Percent Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>