force-app/main/default/objects/NI_Org_Details__c/fields/Handed_Off_to_Support__c.field-meta.xml
<CustomField>
    <fullName>Handed_Off_to_Support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handed Off to Support</label>
    <type>Date</type>
</CustomField>