force-app/main/default/objects/NI_Org_Details__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-006294

Indicates if an org detail is inactive</description>
    <inlineHelpText>Indicates if an org detail is inactive</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>