force-app/main/default/objects/NI_Org_Details__c/fields/Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <inlineHelpText>Last time Audit data was updated.</inlineHelpText>
    <label>Last Update Date</label>
    <summarizedField>PollingResult__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>PollingResult__c.ErrorOccured__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>PollingResult__c.AccountId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>