force-app/main/default/objects/NI_Org_Details__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>Salesforce.com Change Request: NICC-006916</description>
    <inlineHelpText>Type of License</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Embedded Plus</fullName>
            </value>
            <value>
                <fullName>EDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>