force-app/main/default/objects/NI_Org_Details__c/fields/License_Type_Compliant__c.field-meta.xml
<CustomField>
    <fullName>License_Type_Compliant__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <formula>IF(TEXT(License_Type__c)=Required_License_Type__c,TRUE, 
IF(TEXT (License_Type__c)=&quot;Sales Cloud&quot;,TRUE, 
IF(TEXT (License_Type__c)=&quot;Mixed&quot;, TRUE, 
IF(TEXT (License_Type__c)=&quot;Enterprise&quot;, TRUE, 
IF(AND (TEXT (License_Type__c)=&quot;Embedded Plus&quot;, Required_License_Type__c = &quot;Embedded&quot;), TRUE,
IF(Shared_Org__c = TRUE, TRUE, FALSE))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Type Compliant</label>
    <type>Checkbox</type>
</CustomField>