force-app/main/default/objects/NI_Org_Details__c/fields/Licenses_Available_Platform__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Available_Platform__c</fullName>
    <formula>Licenses_Provisioned_Platform__c - Active_Users_Platform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licenses Available (Platform)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>