force-app/main/default/objects/NI_Org_Details__c/fields/Licenses_Provisioned_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Provisioned_Salesforce__c</fullName>
    <inlineHelpText>Total number of Full licenses that have been provisioned to the Org (whether actively in use or not)</inlineHelpText>
    <label>Licenses Provisioned (Salesforce)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>