force-app/main/default/objects/NI_Org_Details__c/fields/Licenses_Provisioned_Total__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Provisioned_Total__c</fullName>
    <formula>Licenses_Provisioned_Salesforce__c  +  Licenses_Provisioned_Platform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licenses Provisioned (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>