force-app/main/default/objects/NI_Org_Details__c/fields/Limited_Users_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Limited_Users_Compliant__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <formula>IF(( Purchased_Full_Users__c  &lt;  Current_Full_Users__c ), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limited Users Compliant</label>
    <type>Checkbox</type>
</CustomField>