force-app/main/default/objects/NI_Org_Details__c/fields/LOD_SF_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>LOD_SF_Login_URL__c</fullName>
    <formula>&quot;https://login.salesforce.com/?un=&quot; + AdminLoginName__c + &quot;&amp;pw=&quot; + AdminPassword__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOD SF Login URL</label>
    <type>Text</type>
</CustomField>