force-app/main/default/objects/NI_Org_Details__c/fields/MeetingBroker_URL__c.field-meta.xml
<CustomField>
    <fullName>MeetingBroker_URL__c</fullName>
    <description>Salesforce.com Change Request: NICC-005752

Added for the MB Trusted Source User record Type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for &quot;MB Trusted Source User&quot; record type to track the MeetingBroker URL</inlineHelpText>
    <label>MeetingBroker URL</label>
    <type>Url</type>
</CustomField>