force-app/main/default/objects/NI_Org_Details__c/fields/Newmarket_Requester__c.field-meta.xml
<CustomField>
    <fullName>Newmarket_Requester__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-012951</description>
    <inlineHelpText>User to be notified if an Org remains as Trial for more than 21 days</inlineHelpText>
    <label>Newmarket Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Org_Details</relationshipName>
    <type>Lookup</type>
</CustomField>