force-app/main/default/objects/NI_Org_Details__c/fields/OnDemand_Tools__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-010309 (TrackIt #: 112752)</description>
    <inlineHelpText>Is DemandTools installed in the org</inlineHelpText>
    <label>Demand Tools</label>
    <type>Checkbox</type>
</CustomField>