force-app/main/default/objects/NI_Org_Details__c/fields/Org_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Org_Compliance_Status__c</fullName>
    <formula>IF(  Org_Compliant__c = false, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Compliance Status</label>
    <type>Text</type>
</CustomField>