force-app/main/default/objects/NI_Org_Details__c/fields/Org_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Org_Compliant__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <formula>AND ( Data_Storage_Compliant__c = TRUE, File_Storage_Compliant__c = TRUE, License_Type_Compliant__c = TRUE, Limited_Users_Compliant__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Compliant</label>
    <type>Checkbox</type>
</CustomField>