force-app/main/default/objects/NI_Org_Details__c/fields/Org_Login_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Org_Login_Authorized__c</fullName>
    <description>Formula to authorize users to click the &quot;Org Login&quot; button. This will prevent unauthorized users from logging into customer orgs</description>
    <formula>IF (OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name =&quot;NI Support Managers&quot;,$Profile.Name =&quot;NI Administrator&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
    <inlineHelpText>This indicates whether or not you are authorized to log into a customer org.</inlineHelpText>
    <label>Org Login Authorized?</label>
    <type>Text</type>
</CustomField>