force-app/main/default/objects/NI_Org_Details__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>