force-app/main/default/objects/NI_Org_Details__c/fields/Org_Status__c.field-meta.xml
<CustomField>
    <fullName>Org_Status__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Salesforce.com Change Request: NICC-006967

Requested on Behalf of Suzanne LeDuc: 

I need a way to indicate if an org is in trial. I&apos;m thinking instead of another check box, having a picklist called Org Status with the values: created, provisioned, In process, Trial, Demo</description>
    <inlineHelpText>Status of the Org</inlineHelpText>
    <label>Org Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>Provisioned</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>