force-app/main/default/objects/NI_Org_Details__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <description>Salesforce.com Change Request: NICC-007567

Used to identify the type of environment that the org detail record represents. There can be a Production Org and various Sandbox Orgs.</description>
    <inlineHelpText>Type of environment</inlineHelpText>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Production</fullName>
            </value>
            <value>
                <fullName>Salesforce Sandbox - Configuration Only</fullName>
            </value>
            <value>
                <fullName>Salesforce Sandbox - Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Sandbox - Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>