force-app/main/default/objects/NI_Org_Details__c/fields/ParentAccountId__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>