force-app/main/default/objects/NI_Org_Details__c/fields/PasswordToken__c.field-meta.xml
<CustomField>
    <fullName>PasswordToken__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Password Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>