force-app/main/default/objects/NI_Org_Details__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Management Company or main Account in the Org.</inlineHelpText>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Org Details (Main Account)</relationshipLabel>
    <relationshipName>Org_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>