force-app/main/default/objects/NI_Org_Details__c/fields/Purchased_Full_Users__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Full_Users__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <formula>Licenses_Provisioned_Total__c - Purchased_Limited_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchased Full Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>