force-app/main/default/objects/NI_Org_Details__c/fields/Purchased_Limited_Users__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Limited_Users__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Purchased Limited Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>