force-app/main/default/objects/NI_Org_Details__c/fields/Renewal_Month__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Month__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Salesforce.com Change Request: NICC-006332

The month from the Annual Salesforce Renewal Date</description>
    <formula>MONTH(Annual_Salesforce_Renewal_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The month from the Annual Salesforce Renewal Date</inlineHelpText>
    <label>Renewal Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>