force-app/main/default/objects/NI_Org_Details__c/fields/Salesforce_My_Domain__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_My_Domain__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>deprecated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>deprecated</inlineHelpText>
    <label>Salesforce My Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>