force-app/main/default/objects/NI_Org_Details__c/fields/Security_Answer_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Security_Answer_Encrypted__c</fullName>
    <description>Salesforce.com Change Request: NICC-015316

Encrypted field</description>
    <inlineHelpText>The security answer for the admin user login.  This is an encrypted field</inlineHelpText>
    <label>Security Answer (Encrypted)</label>
    <length>60</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>